<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" >
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/pbDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/retry"
        android:visibility="invisible"
        android:layout_centerVertical="true"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailBackdrop"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/detailPoster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY"
                android:layout_below="@id/detailBackdrop"
                android:layout_marginTop="-25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/movie_title"
                android:layout_toRightOf="@id/detailPoster"
                android:layout_below="@id/detailBackdrop"
                android:layout_toEndOf="@id/detailPoster"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <RatingBar
                android:id="@+id/detailRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:layout_toRightOf="@id/detailPoster"
                android:layout_below="@id/detailTitle"
                android:layout_toEndOf="@id/detailPoster"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/txt_releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/releaseDate"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/detailPoster"
                android:layout_below="@id/detailRating"
                android:layout_toEndOf="@id/detailPoster"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/detailReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textSize="15sp"
                tools:text="@string/releaseDate"
                android:layout_toRightOf="@id/detailPoster"
                android:layout_below="@id/txt_releaseDate"
                android:layout_toEndOf="@id/detailPoster"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/txt_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/runtime"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/detailPoster"
                android:layout_below="@id/detailReleaseDate"
                android:layout_toEndOf="@id/detailPoster"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/detailRuntime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textSize="15sp"
                tools:text="@string/runtime"
                android:layout_toRightOf="@id/detailPoster"
                android:layout_below="@id/txt_runtime"
                android:layout_toEndOf="@id/detailPoster"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/txt_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/genre"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/detailPoster"/>

            <TextView
                android:id="@+id/detailGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="7dp"
                android:textSize="15sp"
                tools:text="@string/genre"
                android:layout_below="@id/txt_poster"/>

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/overview"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/detailGenres"/>

            <TextView
                android:id="@+id/detailOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="5dp"
                android:textSize="15sp"
                tools:text="@string/overview"
                android:layout_below="@id/txt_overview"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>